EXOJCR-793 : test for security restriction